# railz-python

./: .gitignore  README.md  fix-schema  generate  openapi-python-client.yaml  pyproject.toml  schema.json  schema.yaml  update-schema
railz-api-client/: README.md  pyproject.toml
railz-api-client/railz_api_client/: __init__.py  types.py
railz-api-client/railz_api_client/api/accounting_transactions/: accounting_transactions.py
railz-api-client/railz_api_client/api/aging_reports/: ap_aging.py  ar_aging.py
railz-api-client/railz_api_client/models/: __init__.py  account_parent_ref.py  account_ref.py  account_ref_dto.py  account_ref_v2_dto.py  accounting_transaction_account_ref.py  accounting_transaction_account_ref_section.py  accounting_transaction_account_ref_sub_section.py  accounting_transaction_account_ref_v2.py  accounting_transaction_currency.py  accounting_transaction_data_v1.py  accounting_transaction_data_v1_type.py  accounting_transaction_data_v2.py  accounting_transaction_data_v2_section.py  accounting_transaction_data_v2_sub_section.py  accounting_transaction_data_v2_type.py  accounting_transaction_entity_ref.py  accounting_transaction_entity_ref_v2.py  accounting_transaction_entity_ref_v2_type.py  accounting_transaction_tracking_category_ref_v2.py  accounting_transaction_tracking_category_ref_v2_type.py  accounting_transactions_report_meta_data.py  accounting_transactions_report_meta_data_service_name.py  accounting_transactions_report_meta_data_v2.py  accounting_transactions_report_meta_data_v2_service_name.py  accounting_transactions_response_dto.py  accounting_transactions_response_v2_dto.py  address.py  address_type.py  addresses.py  addresses_type.py  ap_account_ref_dto.py  ap_aging_meta_data.py  ap_aging_meta_data_service_name.py  ap_aging_meta_data_v2.py  ap_aging_meta_data_v2_service_name.py  ap_aging_report_frequency.py  ap_aging_vendor_ref.py  ap_aging_vendor_ref_v2.py  ap_ar_aging_currency_ref.py  (+1426 more)
templates/: endpoint_macros.py.jinja  (+2 more)
(+135 files in other folders)
