[project]
name = "railz-client"
version = "0.1a1"
description = "Generated API client for Railz"
authors = [
    { name = "Eitan Mosenkis", email = "eitan@levro.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"
