[project]
name = "railz-client-generator"
version = "0.1.0"
description = "Codegen for railz-api-client"
authors = [
    { name = "Eitan Mosenkis", email = "eitan@levro.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.10"

[tool.rye]
managed = true
virtual = true
dev-dependencies = [
    "openapi-python-client>=0.21.6",
    "ruff>=0.7.0",
]

[tool.rye.scripts]
generate = "./generate"
