[project]
name = "railz-client-generator"
version = "0.1.0"
description = "Codegen for railz-api-client"
authors = [
    { name = "Eitan Mosenkis", email = "eitan@levro.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.10"

[tool.rye]
managed = true
virtual = true
dev-dependencies = [
    "mypy>=1.13.0",
    "openapi-python-client>=0.21.6",
    "ruff>=0.7.0",
    "types-python-dateutil>=2.9.0.20241003",
]

[tool.rye.scripts]
generate = "./generate"
